# Email-Assistant

./: .env.production  .vercelignore  DEPLOYMENT.md  DOCKER_README.md  Dockerfile  Dockerfile.ui  GOOGLE_CALENDAR_SETUP.md  RENDER_DEPLOYMENT.md  WEB_SEARCH_SETUP.md  app.py  deploy-render.sh  deploy.py  deploy.sh  docker-compose.yml  docker-deploy.sh  email_assistant.db  env.example  langgraph.json  package.json  pyproject.toml  render.yaml  requirements-vercel.txt  requirements.production.txt  requirements.txt  vercel.json
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
api/: main.py
data/drafts/: draft_20260221_112933.json  draft_20260221_113142.json  draft_20260221_113330.json  draft_20260221_114203.json  draft_20260221_114353.json  draft_20260221_123719.json  draft_20260221_220316.json  draft_20260221_225729.json  draft_20260221_230011.json  draft_20260221_230717.json  draft_20260221_231122.json  draft_20260221_233934.json  draft_20260221_235409.json  draft_20260221_235431.json  draft_20260221_235528.json  draft_20260222_001123.json  draft_20260222_001256.json  draft_20260222_001302.json  draft_20260222_002300.json  draft_20260222_002647.json  draft_20260222_002959.json  draft_20260222_003021.json  draft_20260222_003140.json  draft_20260222_003335.json  draft_20260222_003803.json  (+6 more)
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: test_real_emails.py
src/agents/: tools.py  (+3 more)
tests/: simple_test.py  test_email.py  test_guardrails.py  test_hitl.py
(+21 files in other folders)
