[project]
name = "email-assistant"
version = "0.1.0"
description = "AI-powered Email Assistant with LangChain"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.9",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.9",
    "langchain-ollama>=1.0.1",
    "uvicorn>=0.40.0",
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "email-validator>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "sqlalchemy>=2.0.0",
    "chromadb>=0.4.0",
    "faiss-cpu>=1.7.0",
    "loguru>=0.7.0"
]

[project.scripts]
app = "app:app"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
